traversal.snake.Snake.scala.error
Compilation error:
Snake:4: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    if (estFaceMur()==true){
    ^Snake:15: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    return false
    ^Snake:19: error: '(' expected but '}' found.
  } 
  ^