traversal.snake.Snake.scala.code
override def run() {
  def finale():Boolean{
    var a=getDirection()
    if (estFaceMur()==true){
      if (a=Direction.EST){
        gauche()
        if (estFaceMur==true){return true}
        return false
      } else {
        droite()
        if (estFaceMur==true){return true}
        return false
      }
    }
    return false
  }
while 
    
  }